--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": {},
   "author": "Oleg Demchuk <demchukoleg88@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon server.js --exec babel-node"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
@@ -14,6 +17,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^1.12.1"
   }
 }
