--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "nodemon": "^1.12.1"
+    "eslint-plugin-prettier": "^2.3.1",
+    "nodemon": "^1.12.1",
+    "prettier": "^1.7.4"
   }
 }
