--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.10.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.3.1",
     "nodemon": "^1.12.1",
     "prettier": "^1.7.4"
