--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon server.js --exec babel-node"
   },
   "dependencies": {
+    "aws-sdk": "^2.145.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.0",
