--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "plugins": [
     "prettier"
   ],
+  "extends": "eslint:recommended",
   "rules": {
     "prettier/prettier": ["error", {
       "singleQuote": true,
