--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "prettier"
   ],
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   },
   "extends": "eslint:recommended",
   "rules": {
